--- a/Hot4/Hot4.Server/Components/Layout/NavMenu.razor
+++ b/Hot4/Hot4.Server/Components/Layout/NavMenu.razor
@@ -21,10 +21,13 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="../AccessGet.cshtml">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Access
             </NavLink>
+            
+           
         </div>
+      
     </nav>
 </div>
 
