--- a/Hot4/Hot4.Server/Components/Pages/Home.razor
+++ b/Hot4/Hot4.Server/Components/Pages/Home.razor
@@ -4,4 +4,7 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+Welcome to your new app.<br />
+
+ <a asp-page="./AccessCreate">Create New</a><br />
+ <a href="AccessCreate">Create Access</a>
