--- a/Hot4/Hot4.Server/Components/Pages/Home.razor
+++ b/Hot4/Hot4.Server/Components/Pages/Home.razor
@@ -1,10 +1,37 @@
 ﻿@page "/"
 
+@inject Hot4.Repository.Abstract.IAccessRepository _accessRepository; 
+@using Hot4.DataModel.Models;
+
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.<br />
+
+
+    <EditForm Model="access" OnValidSubmit="AddAccess" FormName="Create" Enhance>
+        <div>Access Code:<InputText id="accesscode" @bind-Value="access.AccessCode"/></div>
+    <div>Password : <InputText id="accessPassword" @bind-Value="access.AccessPassword" /></div>
+    <div>AccountId : <InputNumber id="accountId" @bind-Value="access.AccountId" /></div>
+  @*   <div>ChannelId :  <InputNumber id="channelId" @bind-Value="access.ChannelId" /></div> *@
+    <button type="submit">Create</button>
+    </EditForm>
+   
+
+
+@code {
+    private Access access { get; set; } = new() { AccessCode = "8575647389", AccessPassword = "1700", AccountId = 1 };
+
+    private async Task AddAccess()
+    {
+        access.ChannelId = 2;
+        await  _accessRepository.AddAccess(access);
+        // accGetMdl.SaveAccess();
+      
+
+    }
+}
 
  <a asp-page="./AccessCreate">Create New</a><br />
  <a href="AccessCreate">Create Access</a>
