--- a/Hot4/Hot4.Server/Components/Pages/Home.razor
+++ b/Hot4/Hot4.Server/Components/Pages/Home.razor
@@ -32,7 +32,7 @@ Welcome to your new app.<br />
         // List
        // var res = await _accessRepository.ListAccess(1, true, true);
         //get by id
-        var resbyId = await _accessRepository.GetAccess(7);
+        var resbyId = await _accessRepository.GetAccess(10475536);
         //get by Acc and chnl
         var resbyAccChnl = await _accessRepository.ListAccountChannel(1,2);
         //get by acc code
