--- a/Hot4/Hot4.Server/Components/Pages/Bank.razor
+++ b/Hot4/Hot4.Server/Components/Pages/Bank.razor
@@ -35,22 +35,23 @@
        // var bankTrxByBatch = await banktrxRepository.GetTranscation_by_Batch(10024185, true);
 
         
-        var bankTrxById = await banktrxRepository.GetTranscation_by_Id(14187048); //exec xBankTrx_GetFromTrxID 10024239
+       // var bankTrxById = await banktrxRepository.GetTranscation_by_Id(14187048); //exec xBankTrx_GetFromTrxID 14187048
 
         
-        var bankTrxByType = await banktrxRepository.GetAllTranscation_by_Type(17);//exec xBankTrx_ListNewEcocash, 
-        var bankTrxByType2 = await banktrxRepository.GetAllTranscation_by_Type(19); //exec xBankTrx_ListNewOneMoney
+      //  var bankTrxByType = await banktrxRepository.GetAllTranscation_by_Type(17);//exec xBankTrx_ListNewEcocash, 
+      //  var bankTrxByType2 = await banktrxRepository.GetAllTranscation_by_Type(19); //exec xBankTrx_ListNewOneMoney
 
-        var bankTrxByType3 = await banktrxRepository.GetPendingTranscation_by_Type(17); //exec xBankTrx_ListPendingEcoCash
-        var bankTrxByType4 = await banktrxRepository.GetPendingTranscation_by_Type(19); //exec xBankTrx_ListPendingOneMoney
+        // var bankTrxByType3 = await banktrxRepository.GetPendingTranscation_by_Type(17); //exec xBankTrx_ListPendingEcoCash
+        // var bankTrxByType4 = await banktrxRepository.GetPendingTranscation_by_Type(19); //exec xBankTrx_ListPendingOneMoney
 
-        var bankDuplicateTrans = await banktrxRepository.GetDuplicateTranscation(trnsModelForDuplicate); //exec xBankTrx_FindDuplicate 8,29,'2024-11-17 00:49:34.307','pending',0
+        
+       //   var bankDuplicateTrans = await banktrxRepository.GetDuplicateTranscation(trnsModelForDuplicate); //exec xBankTrx_FindDuplicate 8,29,'2024-11-17 00:49:34.307','pending',0
 
-        var bankByPaymnetId = await banktrxRepository.GetTranscation_by_PaymentId("E108F4DE-EE68-454D-80F3-40A6BEF053A3"); //exec xBankTrx_GetFromvPayment 'E108F4DE-EE68-454D-80F3-40A6BEF053A3'
+       // var bankByPaymnetId = await banktrxRepository.GetTranscation_by_PaymentId("E108F4DE-EE68-454D-80F3-40A6BEF053A3"); //exec xBankTrx_GetFromvPayment 'E108F4DE-EE68-454D-80F3-40A6BEF053A3'
 
-        var bankEcoCashPendingTransAmtx = await banktrxRepository.GetEcoCashPendingTranscationCount(ecoCashSerchMdl); //exec xBankTrx_HasEcocashTranPending '0777931881',.20
+        //var bankEcoCashPendingTransAmtx = await banktrxRepository.GetEcoCashPendingTranscationCount(ecoCashSerchMdl); //exec xBankTrx_HasEcocashTranPending '0777931881',.20
 
-        // var resultBankRef = await bankBatchRepository.GetCurrentBatch(1, "09 Oct 21 02.csv", "lordrique.muvengwa");
+        // // var resultBankRef = await bankBatchRepository.GetCurrentBatch(1, "09 Oct 21 02.csv", "lordrique.muvengwa");
         //await bankRepository.AddBank(bnk);
         //  var resAccountSelect = await bankRepository.ListBanks();
 
@@ -59,14 +60,14 @@
 
     private async Task GetPin()
     {
-        var pinByBatchId = await pinRepository.GetPinDetail_by_batchId(12345);
+       // var pinByBatchId = await pinRepository.GetPinDetail_by_batchId(10008274); //exec xPin_List 10008274
 
-        var pinLoaded = await pinRepository.GetPinLoaded_by_batchId(12345);
+        //var pinLoaded = await pinRepository.GetPinLoaded_by_batchId(10008274);  //exec xPin_Loaded 10008274
 
-        var pinStock = await pinRepository.GetPinStock();
+       // var pinStock = await pinRepository.GetPinStock();  //exec xPin_Stock
 
-        var pinRecharge = await pinRepository.PinRecharge(pinRechargePayload);
+      //  var pinRecharge = await pinRepository.PinRecharge(pinRechargePayload);
         var pinRechargePromo = await pinRepository.PinRechargePromo(pinRechargePromoPayload);
-        var pinRedeemedPromo = await pinRepository.PinRedeemedPromo(123456);
+        var pinRedeemedPromo = await pinRepository.PinRedeemedPromo(10008274);
     }
 }
