--- a/Hot4/Hot4.Server/Components/Pages/Bank.razor
+++ b/Hot4/Hot4.Server/Components/Pages/Bank.razor
@@ -53,6 +53,7 @@
     private PinRechargePayload pinRechargePayload { get; set; } = new() { Amount = 10, BrandId = 1, RechargeId = 111 };
     private PinRechargePromoPayload pinRechargePromoPayload { get; set; } = new() { AccessCode = "3232323", BrandId = 1, Mobile = "7878", PinValue = 1, Quantity = 10 };
 
+    private SMSSearchModel smsSearchMdl { get; set; } = new() { StartDate = DateTime.Now.AddMonths(-9), EndDate = DateTime.Now, MessageText = "", Mobile = "", PageNo = 1, PageSize = 10, SmppId = -1, StateId = -1 };
     private async Task GetBank()
     {
         // var bankTrxByBatch = await banktrxRepository.GetTranscation_by_Batch(10024185, true);
@@ -108,6 +109,13 @@
 
     private async Task GetSMS()
     {
-        var result = await smsRepository.SmsBulkSend("");
+        //var result = await smsRepository.SmsBulkSend("");
+        // var resultEmailAgg = await smsRepository.EmailAggregators("","");
+        // var resultEmailCorp = await smsRepository.EmailCorporates("", "");
+        //  var resultSMSInbox = await smsRepository.SMSInbox();
+
+       // DateTime dt = Convert.ToDateTime("2024-10-29 00:49:34.307");
+       // var resultSMSInbox = await smsRepository.GetSMSByAccountSMSDate(11552422,dt,1,10);
+        var resultSMSSearch = await smsRepository.SMSSearch(smsSearchMdl);
     }
 }
