--- a/Hot4/Hot4.Server/Components/Pages/Bank.razor
+++ b/Hot4/Hot4.Server/Components/Pages/Bank.razor
@@ -117,8 +117,8 @@
     private async Task GetSMS()
     {
         //var result = await smsRepository.SmsBulkSend("");
-        var resultEmailAgg = await smsRepository.EmailAggregators("","");
-        // var resultEmailCorp = await smsRepository.EmailCorporates("", "");
+        var resultEmailAgg = await smsRepository.EmailAggregators();
+        // var resultEmailCorp = await smsRepository.EmailCorporates();
         //  var resultSMSInbox = await smsRepository.SMSInbox();
 
         // DateTime dt = Convert.ToDateTime("2024-10-29 00:49:34.307");
