--- a/Hot4/Hot4.Server/Components/Pages/Bank.razor
+++ b/Hot4/Hot4.Server/Components/Pages/Bank.razor
@@ -117,8 +117,9 @@
     private async Task GetSMS()
     {
         //var result = await smsRepository.SmsBulkSend("");
+        var resultS = await smsRepository.SmsBulkSmsSend("testing demo SmsBulkSmsSend");
         var resultEmailAgg = await smsRepository.EmailAggregators();
-        // var resultEmailCorp = await smsRepository.EmailCorporates();
+         var resultEmailCorp = await smsRepository.EmailCorporates();
         //  var resultSMSInbox = await smsRepository.SMSInbox();
 
         // DateTime dt = Convert.ToDateTime("2024-10-29 00:49:34.307");
@@ -131,9 +132,9 @@
     
     private async Task GetRecharge()
     {
-        var result = await rechargeRepository.GetRechargeAggregator(rechargeAggSearchModel);
+       // var result = await rechargeRepository.GetRechargeAggregator(rechargeAggSearchModel);
 
-        var resultFind = await rechargeRepository.FindRechargeByMobileAndAccountId(rechargeFindModel);
+       // var resultFind = await rechargeRepository.FindRechargeByMobileAndAccountId(rechargeFindModel);
         var resultByBrandIds = await rechargeRepository.RechargePendingStsByMulBrands(new List<byte>{1,2,3});
 
         var resultByBrandId = await rechargeRepository.RechargePendingStsByBrandId(1);
