--- a/Hot4/Hot4.Server/Components/Pages/Bank.razor
+++ b/Hot4/Hot4.Server/Components/Pages/Bank.razor
@@ -17,6 +17,8 @@
 @inject Hot4.Repository.Abstract.ILimitRepository limitRepository;
 @inject Hot4.Repository.Abstract.IPaymentRepository paymentRepository;
 
+@inject Hot4.Service.Abstract.IBankTrxBatchService bankBatchService;
+
 @using Hot4.DataModel.Models;
 @using Hot4.ViewModel;
 
@@ -92,7 +94,7 @@
     private Account account { get; set; } = new() { AccountName = "prd",  Email = "pradeep123@gmail.com", InsertDate = DateTime.Now, NationalId = "12233", ProfileId = 1, ReferredBy = "7009373728"};
     private async Task GetAccount()
     {
-       // var result = await accountRepository.AddAccount(account);
+        // var result = await accountRepository.AddAccount(account);
         var resultSearch = await accountRepository.SearchAccount("prd",1,10);
     }
 
@@ -104,6 +106,7 @@
 
 
     private SMSSearchModel smsSearchMdl { get; set; } = new() { StartDate = DateTime.Now.AddMonths(-9), EndDate = DateTime.Now, MessageText = "", Mobile = "", PageNo = 1, PageSize = 10, SmppId = -1, StateId = -1 };
+    private BankTrxBatchToDo bankTrxBatchToDo { get; set; } = new() { BankId = 1, BatchDate = DateTime.Now, BatchReference = "no ref", LastUser = "pradeep" };
     private async Task GetBank()
     {
         // var bankTrxByBatch = await banktrxRepository.GetTranscation_by_Batch(10024185, true);
@@ -119,7 +122,7 @@
         // var bankTrxByType4 = await banktrxRepository.GetPendingTranscation_by_Type(19); //exec xBankTrx_ListPendingOneMoney
 
 
-        var bankDuplicateTrans = await banktrxRepository.GetDuplicateTrx(trnsModelForDuplicate); //exec xBankTrx_FindDuplicate 8,29,'2024-11-17 00:49:34.307','pending',0
+        // var bankDuplicateTrans = await banktrxRepository.GetDuplicateTrx(trnsModelForDuplicate); //exec xBankTrx_FindDuplicate 8,29,'2024-11-17 00:49:34.307','pending',0
 
         // var bankByPaymnetId = await banktrxRepository.GetTranscation_by_PaymentId("E108F4DE-EE68-454D-80F3-40A6BEF053A3"); //exec xBankTrx_GetFromvPayment 'E108F4DE-EE68-454D-80F3-40A6BEF053A3'
 
@@ -129,6 +132,12 @@
         //await bankRepository.AddBank(bnk);
         //  var resAccountSelect = await bankRepository.ListBanks();
 
+        // service 
+        // var addBatchService = await bankBatchService.AddBatch(bankTrxBatchToDo);
+       // var getBatchService = await bankBatchService.GetBatchById(4545454545);
+       // var getBatchService2 = await bankBatchService.GetBatchById(10072061);
+      //  var getBatchBybankid = await bankBatchService.GetBatchByBankId(1);
+        var getCurrentBatchBybankid = await bankBatchService.GetCurrentBatch(1,"amt","sss");
 
     }
 
