changes in repo and add service

--- a/Hot4/Hot4.Server/Components/Pages/Bank.razor
+++ b/Hot4/Hot4.Server/Components/Pages/Bank.razor
@@ -87,7 +87,7 @@
         // access.ChannelId = 2;
         // await accessRepository.AddAccess(access);
         // var result = await accessRepository.GetLoginDetails("7009373729", "1700");
-        await accessRepository.PasswordChange(12208706, "1900");
+       // await accessRepository.PasswordChange(12208706, "1900");
     }
     private Account account { get; set; } = new() { AccountName = "prd",  Email = "pradeep123@gmail.com", InsertDate = DateTime.Now, NationalId = "12233", ProfileId = 1, ReferredBy = "7009373728"};
     private async Task GetAccount()
