--- a/Hot4/Hot4.Server/Components/Pages/Bank.razor
+++ b/Hot4/Hot4.Server/Components/Pages/Bank.razor
@@ -148,7 +148,7 @@
 
         // SERVICE START
            // 1) BANKTRXBATCH
-         var addBatchService = await bankBatchService.AddBatch(bankTrxBatchToDo);
+        // var addBatchService = await bankBatchService.AddBatch(bankTrxBatchToDo);
         var getBatchService = await bankBatchService.GetBatchById(4545454545);
        var getBatchService2 = await bankBatchService.GetBatchById(10072061);
       //  var getBatchBybankid = await bankBatchService.GetBatchByBankId(1);
